--- a/app/src/main/assets/components/image/image.css
+++ b/app/src/main/assets/components/image/image.css
@@ -19,10 +19,27 @@ image-view {
 
 	thumbnail-carousel {
 		position: fixed;
+		inset: auto 0 70px 0;
 		display: flex;
+		align-items: center;
+		gap: 8px;
+		height: 68px;
+		padding: 8px;
 		overflow: auto;
+		transition: opacity .5s;
+
+		&.hidden { opacity: 0; pointer-events: none; }
+
 		img {
-			/* TODO setup scroll snapping */
+			flex-shrink: 0;
+			width: 40px;
+			height: 48px;
+			border-radius: 6px;
+			border: 2px solid var(--background-translucent);
+			object-fit: cover;
+			transition: scale .2s;
+
+			&.active { scale: 1.25; }
 		}
 	}
 
@@ -36,6 +53,9 @@ image-view {
 		padding: 4px 24px 4px 4px;
 		border-radius: 28px;
 		background: var(--background-light);
+		transition: opacity .5s;
+
+		&.hidden { opacity: 0; pointer-events: none; }
 
 		#back-button {
 			flex-shrink: 0;
@@ -43,16 +63,26 @@ image-view {
 		}
 		info {
 			h1, span {
+				display: block;
 				max-width: 70vw;
 				color: var(--text);
-				font: 400 18px / 1 system-ui;
+				font: 400 16px / 1.2 system-ui;
 				text-overflow: ellipsis;
 				white-space: nowrap;
 				overflow: hidden;
 			}
 			span {
+				display: flex;
+				align-items: center;
+				gap: 8px;
 				color: var(--text-light);
-				font: 400 12px / 1 system-ui;
+				font: 400 10px / 1.5 system-ui;
+
+				separator {
+					width: 1px;
+					height: 8px;
+					background: var(--background-active);
+				}
 			}
 		}
 	}
